force-app/main/default/objects/OrderItem/fields/IFI_Location__c.field-meta.xml
<CustomField>
    <fullName>IFI_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>IFI_Location__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>