force-app/main/default/objects/OrderItem/fields/IFI_Opportunity_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>IFI_Opportunity_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Opportunity Product Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>