force-app/main/default/objects/OrderItem/fields/IFI_OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>IFI_OpportunityProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>