force-app/main/default/objects/OrderItem/fields/IFI_Uniquer__c.field-meta.xml
<CustomField>
    <fullName>IFI_Uniquer__c</fullName>
    <externalId>true</externalId>
    <label>Uniquer</label>
    <length>56</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>